# mlx-plamo

./: LICENSE  README.md  pyproject.toml  setup.cfg
mlx_plamo/: convert.py  generate.py  plamo.py  utils.py
mlx_plamo/datasets/: tweets.py
mlx_plamo/models/: plamo.py
scripts/: fuse_lora.py  train.py
