[tool.poetry]
name = "mlx-plamo"
version = "0.1.0"
description = "Sample code of PLaMo running on mac using MLX"
authors = ["Shunta Saito <shunta.saito@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlx_plamo"}]

[tool.poetry.dependencies]
python = "^3.11"
sentencepiece = "^0.1.99"
transformers = "4.32.0"
mlx = "^0.0.9"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
ipdb = "^0.13.13"
isort = "^5.13.2"
black = "^23.12.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
